...
                                    <action selector="pressRegister:" destination="S21-9a-RDY" eventType="touchUpInside" id="TCY-Bn-NLa"/>
                                </connections>
                            </button>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="j6z-w9-7xl">
                                <rect key="frame" x="24" y="371.5" width="366" height="153"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uXT-pw-Gox">
                                        <rect key="frame" x="0.0" y="0.0" width="366" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="9SP-25-CBH"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SC4-WM-WED">
                                        <rect key="frame" x="0.0" y="54" width="366" height="40"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="40" id="hrT-ZX-EtD"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="numberPad"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aPw-XH-VbY">
                                        <rect key="frame" x="0.0" y="108" width="366" height="45"/>
                                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="p9A-jM-7Tn"/>
                                        </constraints>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="8"/>
                                            </userDefinedRuntimeAttribute>
...
            </objects>
            <point key="canvasLocation" x="-716" y="-98"/>
        </scene>
        <!--Profile Controller-->
        <scene sceneID="x53-32-3lD">
            <objects>
                <viewController storyboardIdentifier="ProfileController" id="Fpo-At-iAS" customClass="ProfileController" customModule="UnitTestExample" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Zf0-aL-xSS">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qZ6-I2-VPM">
                                <rect key="frame" x="24" y="113" width="366" height="725"/>
...
